--- a/css/superbox.css
+++ b/css/superbox.css
@@ -43,7 +43,7 @@ img {
 	display:inline-block;
 	*display:inline;
 	zoom:1;
-	width:20%;
+	height:5%;
 }
 .superbox-img {
 	max-width:100%;
@@ -53,17 +53,13 @@ img {
 .superbox-show {
 	text-align:center;
 	position:relative;
-	background:#333;
-	box-shadow:inset 0 1px 5px #111;
-	-webkit-box-shadow:inset 0 1px 5px #111;
-	-moz-box-shadow:inset 0 1px 5px #111;
 	width:100%;
     float:left;
 	padding:25px;
 	display:none;
 }
 .superbox-current-img {
-	width:60%; !important
+	width:40%; !important
 	box-shadow:0 1px 4px #222;
 	border:1px solid #222;
 }
